--- a/1_data_import.Rmd
+++ b/1_data_import.Rmd
@@ -74,21 +74,24 @@ b3a_si = read_dta("data/hh14_all_dta/b3a_si.dta") # Book 3b, Section si
 ### Information about Pregnancy
 ```{r}
 ## Select data
-w5_pregnancy = w5_pregnancy %>% select(pidlink, ch06, ch08, ch09day, ch09mth, ch09yr, ch25)
-w4_pregnancy = w4_pregnancy %>% select(pidlink, ch06, ch08, ch09day, ch09mth, ch09yr, ch25)
-w3_pregnancy = w3_pregnancy %>% select(pidlink, ch06, ch08, ch09day, ch09mth, ch09yr, ch25)
-w2_pregnancy = w2_pregnancy %>% select(pidlink, ch06, ch08, ch09day, ch09mth, ch09yr, ch25)
-w1_pregnancy = w1_pregnancy %>% select(pidlink, ch06, ch08, ch09day, ch09mth, ch09yr, ch25)
+w5_pregnancy = w5_pregnancy %>% select(pidlink, ch05, ch06, ch06a, ch08, ch09day, ch09mth, ch09yr, ch25)
+w4_pregnancy = w4_pregnancy %>% select(pidlink, ch05, ch06, ch06a, ch08, ch09day, ch09mth, ch09yr, ch25)
+w3_pregnancy = w3_pregnancy %>% select(pidlink, ch05, ch06, ch06a, ch08, ch09day, ch09mth, ch09yr, ch25)
+w2_pregnancy = w2_pregnancy %>% select(pidlink, ch05, ch06, ch06a, ch08, ch09day, ch09mth, ch09yr, ch25)
+w1_pregnancy = w1_pregnancy %>% 
+  group_by(pidlink, ch04) %>% mutate(ch06a = if_else(!is.na(pidlink) & !is.na(ch04), if_else( n() > 1, 1, 3), 9)) %>%
+  ungroup() %>% 
+  select(pidlink, ch05, ch06, ch06a, ch08, ch09day, ch09mth, ch09yr, ch25) %>% 
 # In the first wave the year is named wrong
-w1_pregnancy = w1_pregnancy %>%
-  mutate(ch09yr = ifelse(ch09yr <= 93, ch09yr, NA))
-w1_pregnancy$ch09yr = as.numeric(str_c("19", w1_pregnancy$ch09yr))
+  mutate(ch09yr = ifelse(ch09yr <= 93, ch09yr, NA),
+          ch09yr = as.numeric(str_c("19", ch09yr)))
 
 ## Combine data
-pregnancy = bind_rows(w1_pregnancy, w2_pregnancy, w3_pregnancy, w4_pregnancy, w5_pregnancy)
+pregnancy = bind_rows(w1 = w1_pregnancy, w2 = w2_pregnancy, w3 = w3_pregnancy, w4 = w4_pregnancy, w5 = w5_pregnancy, .id = "wave")
+prop.table(table(pregnancy$ch06a))
 
 ## Rename Variables
-pregnancy = pregnancy %>% rename(lifebirths = ch06, gender = ch08, birth_day = ch09day, birth_month = ch09mth, birth_year = ch09yr, mother_pidlink = pidlink, alive = ch25) # pregnancy$lifebirths values: 1 = still pregnant, 2 = livebirth, 3 = still birth, 4 = misscarriage
+pregnancy = pregnancy %>% rename(lifebirths = ch06, multiple_birth = ch06a, gender = ch08, birth_day = ch09day, birth_month = ch09mth, birth_year = ch09yr, mother_pidlink = pidlink, alive = ch25) # pregnancy$lifebirths values: 1 = still pregnant, 2 = livebirth, 3 = still birth, 4 = misscarriage
 
 ## Set values as NA that are missing
 pregnancy$birth_day[ pregnancy$birth_day>31] = NA
@@ -106,32 +109,55 @@ pregnancy = pregnancy %>%
          mother_birthdate = str_c(mother_pidlink, "-", birthdate))
 
 ##remove all with missing birthdate/miscarriage date
+table(is.na(pregnancy$birthdate))
+
 pregnancy = pregnancy %>%
   filter(!is.na(birthdate))
 
-### Remove all families with multiple births for pregnancy order:
-## Mark multpile births
-pregnancy = pregnancy %>%
-  mutate(multiple_birth_preg = ifelse(duplicated(mother_birthdate), 1, 0))
+### Mark all families/individuals with multiple births for pregnancy order:
 ## All women that ever had multiple births
 twinmothers_preg = pregnancy %>%
-  filter(multiple_birth_preg == 1)
+  # born in the same month
+  mutate(multiple_birth_preg = ifelse(duplicated(mother_birthdate) & !is.na(birth_month), 1, 0)) %>% 
+  filter(multiple_birth_preg == 1) %>% 
+  select(mother_pidlink, mother_birthdate, multiple_birth_preg)
+table(duplicated(twinmothers_preg$mother_pidlink))
+nrow(twinmothers_preg)
 ## Mark individuals with multiple births in family
-pregnancy = pregnancy %>%
-  mutate(multiple_birth_in_family_preg = ifelse((mother_pidlink %in% twinmothers_preg$mother_pidlink), 1, 0))
+pregnancy = pregnancy %>% left_join(
+  twinmothers_preg %>% select(mother_birthdate, multiple_birth_preg) %>% unique(), 
+  by = "mother_birthdate") %>% 
+  left_join(
+  twinmothers_preg %>% select(mother_pidlink, multiple_birth_preg) %>% rename(any_multiple_birth_preg = multiple_birth_preg) %>% unique(), 
+  by = "mother_pidlink") %>% 
+  mutate(multiple_birth_preg = if_else(multiple_birth_preg==1, 1, 0, 0),
+         any_multiple_birth_preg = if_else(any_multiple_birth_preg==1, 1, 0, 0))
 
+prop.table(table(pregnancy$multiple_birth_preg))
+prop.table(table(pregnancy$any_multiple_birth_preg))
 
-### Remove all families with multiple births for birth order:
-## Mark multpile births
-pregnancy_alive = pregnancy %>%
-  filter(lifebirths == 2) %>%
-  mutate(multiple_birth_alive = ifelse(duplicated(mother_birthdate), 1, 0))
+### Mark all families/individuals with multiple births for pregnancy order:
 ## All women that ever had multiple births
-twinmothers_alive = pregnancy_alive %>%
-  filter(multiple_birth_alive == 1)
+twinmothers = pregnancy %>%
+  filter(lifebirths == 2) %>%
+  # born in the same month
+  mutate(multiple_birth = ifelse(duplicated(mother_birthdate) & !is.na(birth_month), 1, 0)) %>% 
+  filter(multiple_birth == 1) %>% 
+  select(mother_pidlink, mother_birthdate, multiple_birth)
+table(duplicated(twinmothers$mother_pidlink))
+nrow(twinmothers)
 ## Mark individuals with multiple births in family
-pregnancy = pregnancy %>%
-  mutate(multiple_birth_in_family_alive = ifelse((mother_pidlink %in% twinmothers_alive$mother_pidlink), 1, 0))
+pregnancy = pregnancy %>% left_join(
+  twinmothers %>% select(mother_birthdate, multiple_birth) %>% unique(), 
+  by = "mother_birthdate") %>% 
+  left_join(
+  twinmothers %>% select(mother_pidlink, multiple_birth) %>% rename(any_multiple_birth = multiple_birth) %>% unique(), 
+  by = "mother_pidlink") %>% 
+  mutate(multiple_birth = if_else(multiple_birth == 1, 1, 0, 0),
+         any_multiple_birth = if_else(any_multiple_birth == 1, 1, 0, 0))
+
+prop.table(table(pregnancy$multiple_birth))
+prop.table(table(pregnancy$any_multiple_birth))
 ```
 
 ### Information about Marriage History
